Fix crash if default background not found

Its a hard error (i.e. crash) if you return FALSE from
the final fallback in a g_settings_get_mapped map function.
Fix that by returning TRUE with a NULL result.

https://bugzilla.gnome.org/show_bug.cgi?id=682252